--- a/src/components/app-title/app-title.styles.css
+++ b/src/components/app-title/app-title.styles.css
@@ -1,10 +1,10 @@
 .app-title {
-  margin: 40px, 0px;
+  margin: 60px, auto;
 }
 
 h1 {
   font-family: fantasy;
-  font-size: 7vw;
-  letter-spacing: 2.5rem;
+  font-size: 12vw;
+  letter-spacing: 5vw;
   color: rgb(0, 236, 236);
 }
